[package]

authors = ["Florian Gilcher <florian.gilcher@asquera.de>", "fancyflame <fancyflame@163.com"]
name = "leveldb-mcpe"
version = "0.8.6"

description = "An interface for leveldb with zlib support for Minecraft"

license = "MIT"
readme = "README.md"

documentation = "http://skade.github.io/leveldb/"
homepage = "https://github.com/Fancyflame/leveldb-mcpe"
repository = "https://github.com/Fancyflame/leveldb-mcpe"

#autotests = false

[features]

[dependencies]
db-key = "0.1"
libc = "0"

[dependencies.leveldb-mcpe-sys]
path = "../leveldb-mcpe-sys" #暂时这样
version = "*" 

[dev-dependencies]
tempdir = "0.3.4"

#[[test]]
#name = "tests"
